# dexcom-browser-source

./: .gitignore  LICENSE  README.md  hatch.toml  pyproject.toml
src/dexcom_browser_source/: __init__.py  about_dialog.py  browser_source.py  config.py  first_run_wizard.py  settings_dialog.py  settings_window.py  system_tray.py
src/dexcom_browser_source/static/: chart.html  glucose.html
