[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dexcom-browser-source"
description = "Cross-platform Qt desktop application providing a Browser Source for OBS to display Dexcom Glucose Monitor readings"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
authors = [{ name = "possiblemeatball", email = "meatball@manthrowshat.net" }]
maintainers = [
    { name = "possiblemeatball", email = "meatball@manthrowshat.net" },
]
keywords = [
    "dexcom",
    "obs",
    "browser source",
    "obs browser source",
    "dexcom obs display",
    "dexcom stream overlay",
    "dexcom overlay",
    "blood sugar stream overlay",
    "glucose stream overlay",
]
dependencies = [
    "pydexcom==0.5.0",
    "Flask==3.1.2",
    "pyside6==6.10.1",
    "pyqtdarktheme==0.1.7",
    "toml==0.10.2",
    "waitress==3.0.2",
    "matplotlib==3.10.8",
]

[project.urls]
Homepage = "https://manthrowshat.net/projects/dexcom-browser-source"
Documentation = "https://git.manthrowshat.net/meatball/dexcom-browser-source/wiki"
Repository = "https://git.manthrowshat.net/meatball/dexcom-browser-source.git"
Issues = "https://git.manthrowshat.net/meatball/dexcom-browser-source/issues"
Changelog = "https://git.manthrowshat.net/meatball/dexcom-browser-source/commits/branch/main"
